--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body class="bg-white text-gray-800 font-sans">
   <header class="bg-yellow-50 p-4 shadow">
     <div class="container mx-auto flex justify-between items-center">
+      
+    <div class="flex items-center">
+      <img src="assets/images/logo.png" alt="Logo Rượu Làng Ghềnh" class="h-16 mr-4">
       <h1 class="text-2xl font-bold text-green-800">Rượu Làng Ghềnh</h1>
+    </div>
+    
       <nav>
         <ul class="flex gap-4 text-sm md:text-base">
           <li><a href="#home" class="hover:underline">Trang chủ</a></li>
